<resources>
    <string name="app_name">Febys</string>
    <string name="label_unique_categories">Unique Categories</string>
    <string name="label_today_deals">Today\'s Deals</string>
    <string name="label_today_deals_slogan">Discover new deal\'s, just for you</string>
    <string name="label_featured_categories">Featured Categories</string>
    <string name="label_featured_stores">Featured Stores</string>
    <string name="label_categories">Categories</string>
    <string name="label_featured_categories_slogan">We think you\'ll love these</string>
    <string name="label_same_day_delivery_slogan">Explore things that you want on a same day</string>
    <string name="label_trending_products">Trending Products</string>
    <string name="label_products">Products</string>
    <string name="label_trending_products_slogan">Discover the top selling products</string>
    <string name="label_under_100_dollar_items">Under ₵100 Items</string>
    <string name="label_under_100_dollar_items_slogan">Discover new deal\'s, just for you</string>
    <string name="label_editors_pick_items">Editor\'s Pick</string>
    <string name="label_same_day_delivery_items">Same Day Delivery</string>
    <string name="label_shop_now">Shop Now</string>
    <string name="label_shop_all">Shop All</string>
    <string name="label_seasonal_offers">Seasonal Offers</string>
    <string name="label_same_day_delivery">Same day delivery</string>
    <string name="label_store_you_follow">Stores You Follow</string>
    <string name="label_market_you_follow">Celebrities You Follow</string>
    <string name="label_store_you_follow_slogan">This week\'s highlights</string>
    <string name="label_add_protection">Add Protection</string>
    <string name="label_mobile_payment_offer">Mobile Money Payments accepted across all networks <b>Read More</b></string>
    <string name="label_buy_the_exchange_offer">Get up to $99.99 off on exchange <b>Buy with Exchange</b></string>
    <string name="label_credit_card_payment_offer">Bank Offer Extra 5% Off With Axis Bank Buzz Credit Card <b>T&amp;C</b></string>
    <string name="label_add_delivery_address">Add Delivery Address</string>
    <string name="label_enter_delivery_city">Enter Delivery City</string>
    <string name="label_check">Check</string>
    <string name="label_add_delivery_address_info">Usually delivered and installed in 7–9 days Enter pin code for exact delivery dates/charges</string>
    <string name="label_description">Description</string>
    <string name="label_variant">Variant</string>
    <string name="label_select_variant">Select %1s</string>
    <string name="label_title">%1s</string>
    <string name="variant_selected">%1s: %2s</string>
    <string name="only_one_variant">This product has only one variant</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_sign_up_slogan">Create an account to FEBYS to get all features.</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_email_address">Email Address</string>
    <string name="label_user_name">User Name</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_phone">Phone</string>
    <string name="label_phone_info_shipping_address">We will only contact you by phone if there is a problem with your order</string>
    <string name="label_verification">Verification</string>
    <string name="label_otp_verification_slogan">We will send you a One Time OTP Code on your phone number</string>
    <string name="label_resend_otp">Didn\'t receive the verification OTP?</string>
    <string name="label_resend">Resend again</string>
    <string name="label_login">Log In</string>
    <string name="label_email_login">Email</string>
    <string name="label_already_have_an_account">Already have an account?</string>
    <string name="label_login_slogan">Welcome back. Log in to continue.</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_forgot_password_btn">Forgot Password</string>
    <string name="label_not_have_an_account">Don\'t have an account?</string>
    <string name="label_send_reset_password_link">Send Reset Password Link</string>
    <string name="label_forgot_credential_slogan">Please enter your email address to request a password reset.</string>
    <string name="label_forgot_credential">Forgot Password</string>
    <string name="label_loading">Loading…</string>
    <string name="label_manufacture">Manufacture</string>
    <string name="label_shipping_fee_and_returns"><![CDATA[Shipping Fee & Returns]]></string>
    <string name="label_shipping_fee">Shipping Fee</string>
    <string name="label_processing_fee">Processing Fee</string>
    <string name="label_q_and_a"><![CDATA[Q&As]]></string>
    <string name="label_customer_q_and_a"><![CDATA[Customer Questions & Answers]]></string>
    <string name="label_reviews">Reviews</string>
    <string name="label_store_information">Store Information</string>
    <string name="label_official">Official</string>
    <string name="store_rating">(%1.1f) Ratings</string>
    <string name="label_product_availability">Product Availability</string>
    <string name="label_in_stock">In Stock</string>
    <string name="label_out_stock">Out of Stock</string>
    <string name="label_product_will_be_fulfilled_by">Product Will Be Fulfilled by</string>
    <string name="label_product_warranty">Product Warranty</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_fulfilled_by_febys">Febys</string>
    <string name="label_fulfilled_by_vendor">Vendor</string>
    <string name="label_duration">Duration</string>
    <string name="label_product_return_and_refundable">Product Return &amp; Refundable</string>
    <string name="label_return_and_refund_policy">Return &amp; Refund Policy</string>
    <string name="label_wishlist">Wishlist</string>
    <string name="wish_list_count">(%d)</string>
    <string name="label_your_wish_list_is_empty">Your wish list is empty</string>
    <string name="label_get_inspired">Get Inspired</string>
    <string name="label_empty_wish_list_slogan">But not for long! Tap ♡ to start saving you favorite pieces</string>
    <string name="label_connection_error">Connection Error</string>
    <string name="label_error"> Error</string>
    <string name="label_sorry">Sorry</string>
    <string name="okay">Okay</string>
    <string name="label_try_again">Try Again</string>
    <string name="label_no_internet">There\'s a problem with your network connection. Please check your connection</string>
    <string name="label_check_your_email">Check Your Email</string>
    <string name="label_email_sent">We’ve sent an email to the provided address</string>
    <string name="label_refine">Refine</string>
    <string name="label_clear_all">Clear all</string>
    <string name="label_clear">Clear </string>
    <string name="label_new_items">New Items</string>
    <string name="label_low_price">Price ( low first )</string>
    <string name="label_high_price">Price ( high first )</string>
    <string name="label_filter_by">Filter By</string>
    <string name="label_item">Item</string>
    <string name="label_items">Items</string>
    <string name="label_no_item">No Item</string>
    <string name="label_add_to_bag">Add to Bag</string>
    <string name="label_sign_out">Sign Out</string>
    <string name="label_pay_now">Pay Now</string>
    <string name="label_shopping_bag">Shopping Bag</string>
    <string name="label_subtotal">Subtotal</string>
    <string name="label_voucher">Voucher</string>
    <string name="label_wishlist_item">Wishlist Item</string>
    <string name="label_voucher_discount">Voucher Discount</string>
    <string name="label_shipping">Shipping</string>
    <string name="label_sku_id">SKU ID:</string>
    <string name="label_quantity">Quantity:</string>
    <string name="label_remove_from_wishlist">Remove from wishlist</string>
    <string name="label_add_to_wishlist">Add to wishlist</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_wishlist">Wishlist</string>
    <string name="menu_account">Account</string>
    <string name="hint_search">Search…</string>
    <string name="hint_clear">Clear…</string>
    <string name="error_something_went_wrong">Something went wrong!</string>
    <string name="minus">-</string>
    <string name="error_enter_first_name">Please Enter First Name</string>
    <string name="error_enter_address_label">Please Enter Address label</string>
    <string name="error_enter_valid_first_name">Please Enter Valid First Name</string>
    <string name="error_enter_last_name">Please Enter Last Name</string>
    <string name="error_enter_valid_last_name">Please Enter Valid Last Name</string>
    <string name="error_enter_email">Please Enter Email</string>
    <string name="error_enter_valid_email">Please Enter Valid Email</string>
    <string name="error_add_shipping_address">Please select or add shipping address </string>
    <string name="error_add_shipping_method">We are unable to proceed the next step please provide first shipping address </string>
    <string name="error_enter_password_characters">Password must be atleast 8 characters</string>
    <string name="error_enter_password">Please Enter Password</string>
    <string name="error_select_cancel_reason">Please Select Cancel Reason</string>
    <string name="error_enter_confirm_password">Please Enter Password Again</string>
    <string name="error_confirm_password_not_match">Password doesn\'t match</string>
    <string name="error_enter_phone">Please Enter Phone No</string>
    <string name="error_enter_valid_phone">Please Enter Valid Phone No</string>
    <string name="label_proceed_to_checkout">Proceed to Checkout</string>
    <string name="label_proceed_to_payment">Proceed to Payment</string>
    <string name="label_download_pdf">Download PDF</string>
    <string name="label_apply">Apply</string>
    <string name="label_orders">Orders</string>
    <string name="label_my_orders">My Orders</string>
    <string name="label_return_orders">Returned Orders</string>
    <string name="label_cancel_orders">Cancelled Orders</string>
    <string name="label_order_received">Order Received</string>
    <string name="label_my_location">My Location</string>
    <string name="label_my_location_description">This location defines your language and currency</string>
    <string name="label_ghana">Ghana</string>
    <string name="label_support">Support</string>
    <string name="label_about_febys">About Febys</string>
    <string name="label_help_center">Help Center</string>
    <string name="label_privacy_policy">Privacy Policy</string>
    <string name="label_terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="label_settings">Settings</string>
    <string name="label_account_settings">Account Settings</string>
    <string name="label_vouchers">Vouchers</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_shipping_address">Shipping Address</string>
    <string name="label_my_reviews">My Reviews</string>
    <string name="label_apply_filter">Apply Now</string>
    <string name="label_total_amount">Total Amount</string>
    <string name="label_order_summary_with_quantity">Order Summary</string>
    <string name="label_price_range">Price Range</string>
    <string name="label_min">Min</string>
    <string name="label_max">Max</string>
    <string name="label_current_balance">Current Balance</string>
    <string name="label_to">To</string>
    <string name="label_from">From</string>
    <string name="label_vat_inclusive">Vat Inclusive</string>
</resources>