<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_bottom_nav"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search_bottom_nav"
        android:title="@string/menu_search" />

    <!-- todo remove following temporarily id, just add for the verify product detail implementation
         set following id to android:id="@+id/messageFragment"-->
    <item
        android:id="@+id/productDetailFragment"
        android:icon="@drawable/ic_message_bottom_nav"
        android:title="@string/menu_message" />

    <item
        android:id="@+id/wishListFragment"
        android:icon="@drawable/ic_un_fav"
        android:title="@string/menu_wishlist" />

    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/ic_account_bottom_nav"
        android:title="@string/menu_account" />
</menu>