<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_16dp">

        <TextView
            style="@style/TextTheme.HelveticaNeue.TS16.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_support" />

        <TextView
            android:id="@+id/about_febys"
            style="@style/TextTheme.HelveticaNeue.TS14"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:gravity="center_vertical"
            android:text="@string/label_about_febys"
            app:drawableEndCompat="@drawable/ic_right_arrow" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey_e1e5e8" />

        <TextView
            android:id="@+id/help_center"
            style="@style/TextTheme.HelveticaNeue.TS14"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:gravity="center_vertical"
            android:text="@string/label_help_center"
            app:drawableEndCompat="@drawable/ic_right_arrow" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey_e1e5e8" />

        <TextView
            android:id="@+id/privacy_policy"
            style="@style/TextTheme.HelveticaNeue.TS14"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:gravity="center_vertical"
            android:text="@string/label_privacy_policy"
            app:drawableEndCompat="@drawable/ic_right_arrow" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey_e1e5e8" />

        <TextView
            android:id="@+id/terms_and_conditions"
            style="@style/TextTheme.HelveticaNeue.TS14"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:gravity="center_vertical"
            android:text="@string/label_terms_amp_conditions"
            app:drawableEndCompat="@drawable/ic_right_arrow" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey_e1e5e8" />

    </LinearLayout>
</layout>