<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/tools">

    <data>

        <variable
            name="isUserLoggedIn"
            type="Boolean" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_16dp">

        <TextView
            style="@style/TextTheme.HelveticaNeue.TS16.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_settings" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            style="@style/TextTheme.HelveticaNeue.TS14"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:gravity="center_vertical"
            android:text="@string/label_notifications" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey_e1e5e8" />

        <TextView
            android:id="@+id/account_settings"
            style="@style/TextTheme.HelveticaNeue.TS14"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:gravity="center_vertical"
            android:text="@string/label_account_settings"
            app:drawableEndCompat="@drawable/ic_right"
            binding:is_visible="@{isUserLoggedIn}" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey_e1e5e8"
            binding:is_visible="@{isUserLoggedIn}" />

        <TextView
            android:id="@+id/vouchers"
            style="@style/TextTheme.HelveticaNeue.TS14"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:gravity="center_vertical"
            android:text="@string/label_vouchers"
            app:drawableEndCompat="@drawable/ic_right"
            binding:is_visible="@{isUserLoggedIn}" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey_e1e5e8"
            binding:is_visible="@{isUserLoggedIn}" />

        <TextView
            android:id="@+id/shipping_address"
            style="@style/TextTheme.HelveticaNeue.TS14"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:gravity="center_vertical"
            android:text="@string/label_shipping_address"
            app:drawableEndCompat="@drawable/ic_right"
            binding:is_visible="@{isUserLoggedIn}" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey_e1e5e8"
            binding:is_visible="@{isUserLoggedIn}" />

    </LinearLayout>
</layout>