<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_10sdp">

            <TextView
                android:id="@+id/label_price_range"
                style="@style/TextTheme.HelveticaNeue.TS16.Bold"
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_32dp"
                android:text="@string/label_price_range"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:padding="@dimen/_16dp"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="@id/label_price_range"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/label_price_range" />

            <TextView
                android:id="@+id/label_clear"
                style="@style/TextTheme.HelveticaNeue.TS14.Grey"
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:layout_marginEnd="@dimen/_10sdp"
                android:enabled="true"
                android:gravity="center"
                android:text="@string/label_clear"
                app:layout_constraintBottom_toBottomOf="@id/label_price_range"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/label_price_range" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dollar"
                style="@style/TextTheme.HelveticaNeue.TS16.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/label_from" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_min_price"
                style="@style/TextTheme.HelveticaNeue.TS18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_border_dark_grey"
                android:hint="@string/label_min"
                android:inputType="number"
                android:padding="@dimen/_5sdp"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_dollar2"
                style="@style/TextTheme.HelveticaNeue.TS16.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/label_to" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_max_price"
                style="@style/TextTheme.HelveticaNeue.TS18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_border_dark_grey"
                android:hint="@string/label_max"
                android:inputType="number"
                android:padding="@dimen/_5sdp"
                android:textAlignment="textStart" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_show"
            style="@style/ButtonTheme.Contained"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_17sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            android:text="@string/label_apply_filter" />
    </LinearLayout>
</layout>