<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_wallet"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg_border_grey_payment"
            app:layout_constraintTop_toBottomOf="@id/top_bar">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/wallet_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                app:actualImageResource="@drawable/ic_wallet"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_wallet"
                style="@style/TextTheme.HelveticaNeue.TS14.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:text="@string/label_current_balance"
                app:layout_constraintStart_toEndOf="@id/wallet_img"
                app:layout_constraintTop_toTopOf="@id/wallet_img" />

            <TextView
                android:id="@+id/label_price"
                style="@style/TextTheme.HelveticaNeue.TS16.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/tv_wallet"
                app:layout_constraintTop_toBottomOf="@id/tv_wallet"
                tools:text="GHS 100.06" />

            <TextView
                style="@style/TextTheme.HelveticaNeue.TS14"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                app:drawableEndCompat="@drawable/ic_arrow_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            style="@style/TextTheme.HelveticaNeue.TS16.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/label_orders" />

        <TextView
            android:id="@+id/my_orders"
            style="@style/TextTheme.HelveticaNeue.TS14"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:gravity="center_vertical"
            android:text="@string/label_my_orders"
            app:drawableEndCompat="@drawable/ic_right_arrow" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey_e1e5e8" />

        <TextView
            android:id="@+id/order_received"
            style="@style/TextTheme.HelveticaNeue.TS14"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:gravity="center_vertical"
            android:text="@string/label_order_received"
            app:drawableEndCompat="@drawable/ic_right_arrow" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey_e1e5e8" />

        <TextView
            android:id="@+id/my_review"
            style="@style/TextTheme.HelveticaNeue.TS14"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:gravity="center_vertical"
            android:text="@string/label_my_reviews"
            app:drawableEndCompat="@drawable/ic_right_arrow" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey_e1e5e8" />

        <TextView
            android:id="@+id/cancel_orders"
            style="@style/TextTheme.HelveticaNeue.TS14"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:gravity="center_vertical"
            android:text="@string/label_cancel_orders"
            app:drawableEndCompat="@drawable/ic_right_arrow" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey_e1e5e8" />

        <TextView
            android:id="@+id/return_orders"
            style="@style/TextTheme.HelveticaNeue.TS14"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:gravity="center_vertical"
            android:text="@string/label_return_orders"
            app:drawableEndCompat="@drawable/ic_right_arrow" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey_e1e5e8" />
    </LinearLayout>
</layout>