<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:background="@drawable/bg_border_grey_payment"
        android:orientation="vertical"
        android:padding="@dimen/_24sdp">

        <TextView
            android:id="@+id/label_order_summary"
            style="@style/TextTheme.HelveticaNeue.TS16.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/label_order_summary_with_quantity" />

        <LinearLayout
            android:id="@+id/container_order_summary_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_total_amount"
                style="@style/TextTheme.HelveticaNeue.TS16.Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_total_amount" />

            <TextView
                android:id="@+id/tv_total_price"
                style="@style/TextTheme.HelveticaNeue.TS16.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="$158.00" />
        </LinearLayout>

        <TextView
            android:id="@+id/label_vat"
            style="@style/TextTheme.HelveticaNeue.TS14.Grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_minus11sdp"
            android:text="@string/label_vat_inclusive" />

    </LinearLayout>
</layout>